# Organism

./: .gitignore  README.md  organism.py  pyproject.toml
.github/workflows/: publish-pages.yml
chimera_lab/: __init__.py  app.py  cli.py  config.py  db.py  schemas.py
chimera_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chimera_lab/services/: __init__.py  analytics_mirror.py  analytics_store.py  artifact_store.py  arxiv_scheduler.py  assimilation_service.py  autonomy_supervisor.py  channel_gateway.py  company_layer.py  deep_research_service.py  evolution_rollout.py  failure_memory.py  frontier_adapter.py  git_safety.py  github_repo_service.py  local_worker.py  memory_fabric.py  memory_layers.py  memory_service.py  memory_tiers.py  meta_improvement_executor.py  mission_cortex.py  model_merge_registry.py  model_router.py  mutation_guardrails.py  mutation_lab.py  paper_digest_service.py  policy_service.py  publication_service.py  research_evolution.py  research_evolution_service.py  research_organs.py  review_tribunal.py  run_automation.py  run_executor.py  (+7 more)
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md  PUBLICATION.md  dashboard.js  graph.html  graph.js  index.html  style.css
scripts/: export_public_site.py
tests/: test_api.py  test_arxiv_meta.py  test_assimilation_service.py  test_cli.py  test_company_layer.py  test_git_runtime.py  test_memory_layers.py  test_memory_storage_scout_upgrades.py  test_publication_service.py  test_research_evolution.py  test_scout_feeds.py  test_social_vivarium.py  test_supervisor_autonomy.py
(+9 files in other folders)
